--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,13 @@
 
     <%= render 'layouts/header' %>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <%= yield %>
 
-      <%= render 'layouts/footer' %>
-
     </div>
 
-
+    <%= render 'layouts/footer' %>
 
   </body>
 </html>
