--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,9 @@
-<h1>Hello, World<h1>
+<div class="jumbotron">
+  <h1 id="rupee">Projetos Rupee</h1>
+  <p>Gerencie seus projetos em qualquer lugar!</p>
+  <p>
 
-  <%= @nome %>
+    <%= link_to 'Crie Sua Conta', '#', class: 'btn btn-success btn-lg' %>
+
+  </p>
+<div>
