--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,7 +3,7 @@
   <p>Gerencie seus projetos em qualquer lugar!</p>
   <p>
 
-    <%= link_to 'Crie Sua Conta', '#', class: 'btn btn-success btn-lg' %>
+    <%= link_to 'Crie Sua Conta', new_user_path, class: 'btn btn-success btn-lg' %>
 
   </p>
 <div>
