--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,19 @@
 
     <div class="container-fluid">
 
+      <% flash.each do |message_type, message| %>
+       <%= content_tag 'div', class: "alert alert-#{message_type} alert-dismissible", role: 'alert' do %>
+         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+         </button>
+         <%= message %>
+       <% end %>
+     <% end %>
+
       <%= yield %>
 
+      <%= render 'layouts/footer' %>
+
     </div>
-
-    <%= render 'layouts/footer' %>
-
   </body>
 </html>
